--- a/contacto.html
+++ b/contacto.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/estilos.css">
     <script src="css/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <link rel="shortcut icon" href="files/iniciales.PNG" type="image/x-icon">
     <title>Contacto</title>
 </head>
 <body id="contacto">
