--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/bootstrap/css/bootstrap.min.css">
   <script src="css/bootstrap/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="css/estilos.css">
+  <link rel="shortcut icon" href="files/iniciales.PNG" type="image/x-icon">
   <title>Sobre mi</title>
 </head>
 
